@@ -31,5 +31,10 @@ config = user.email APOCAL@cpan.org
 prompt = 1
 repo = perl-{{lc($dist->name)}}
 
+[Bitbucket::Create]
+prompt = 1
+remote = bitbucket
+repo = perl-{{lc($dist->name)}}
+
 ; this will fail if we said no to creating the github repository
 [Git::PushInitial]
