@@ -7,6 +7,7 @@ Revision history for Dist::Zilla::PluginBundle::Apocalyptic
 	Add my own MintingProfile copied from ETHER, thanks!
 	Use GitHub::Update to update the homepage on release
 	Include MetaNoIndex only when it's actually needed!
+	Dropped the use of the Repository plugin in favor of GithubMeta as testing with Bitbucket made it explode!
 
 0.005	2014-10-28 18:09:23 UTC
 
